#2 Finalizando crud funcionarios

--- a/WebFormsApplication/Site.Master
+++ b/WebFormsApplication/Site.Master
@@ -77,7 +77,7 @@
             </asp:ContentPlaceHolder>
             <hr />
             <footer>
-                <p>&copy; <%: DateTime.Now.Year %> - My ASP.NET Application</p>
+                <p>&copy; <%: DateTime.Now.Year %> - Versão 0.0.1</p>
             </footer>
         </div>
     </form>
